--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,14 @@
       <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
-         <version>3.8.1</version>
+         <version>4.4</version>
          <scope>test</scope>
       </dependency>
+      <dependency>
+         <groupId>commons-io</groupId>
+         <artifactId>commons-io</artifactId>
+         <version>2.4</version>
+      </dependency>
+
    </dependencies>
 </project>
